--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,7 +22,6 @@ a {
 }
 
 
-/* Общие стили для всех элементов header */
 .header__logo,
 .header__search,
 .header__right {
@@ -32,7 +31,6 @@ a {
 
 .header__right {
   gap: 20px;
-  /* Универсальный способ добавить пространство между элементами */
 }
 
 .header__phone,
@@ -176,6 +174,10 @@ a {
   justify-content: space-around;
   width: 100%;
   color: #000;
+}
+
+.menu__link {
+  font-size: 12px;
 }
 
 @media (max-width: 868px) {
@@ -531,3 +533,410 @@ a {
   display: flex;
 }
 
+
+
+
+
+
+
+/* Мероприятия */
+/* Events.css */
+.events-page {
+  display: flex;
+  flex-direction: row;
+  padding: 20px;
+}
+
+.event-category-bar {
+  flex-basis: 200px;
+  flex-shrink: 0;
+  margin-right: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.event-category-bar button {
+  padding: 10px;
+  margin-bottom: 5px;
+  cursor: pointer;
+}
+
+.events-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-grow: 1;
+}
+
+.event-item {
+  width: 300px;
+  margin: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media (max-width: 900px) {
+  .events-container {
+    justify-content: center;
+  }
+}
+
+@media (max-width: 600px) {
+  .events-page {
+    flex-direction: column;
+  }
+
+  .event-category-bar {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+
+  .event-item {
+    width: 100%;
+  }
+}
+
+
+
+
+
+
+
+
+.original-text {
+  position: relative;
+  cursor: pointer;
+}
+
+.translated-text {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -100%);
+  min-width: 120px;
+  max-width: 250px;
+  font-size: 16px;
+  background-color: white;
+  color: #546D6A;
+  padding: 10px 15px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  margin-bottom: 6px;
+  display: none;
+  z-index: 1;
+  transition: opacity 0.3s;
+  opacity: 0;
+  white-space: normal;
+  /* Указывает, что текст должен переноситься */
+  overflow-wrap: break-word;
+  /* Гарантирует перенос слов по границам контейнера */
+  text-align: center;
+}
+
+.original-text:hover .translated-text {
+  display: block;
+  opacity: 1;
+}
+
+
+
+
+
+
+
+
+/* Авторизация и регистрация */
+
+.regPage {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+.reg_title {
+  text-align: center;
+  font-size: 26px;
+  font-weight: 600;
+  color: #fff;
+}
+
+.background-image {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* background-image: url('../img/backReg.svg');
+  background-size: cover; */
+  z-index: -1;
+}
+
+.container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  background-color: #D78F80;
+  width: 380px;
+  display: block;
+  border-radius: 30px;
+  padding: 30px 0px;
+}
+
+.logo {
+  width: 150px;
+}
+
+form {
+  margin-top: 8px;
+}
+
+.reg_input {
+  width: 280px;
+  height: 35px;
+  border-radius: 30px;
+  padding: 0px 20px;
+  margin-bottom: 0px;
+}
+
+.reg_photo {
+  width: 280px;
+  height: 35px;
+  border-radius: 30px;
+  background-color: #fff;
+  align-items: center;
+  padding-top: 7px;
+}
+
+input,
+button {
+  margin: 10px;
+  padding: 5px;
+}
+
+.password-input {
+  position: relative;
+}
+
+.show-password {
+  position: absolute;
+  right: 5px;
+  top: 60%;
+  left: 77%;
+  transform: translateY(-50%);
+}
+
+.show-confirm-password {
+  position: absolute;
+  right: 5px;
+  top: 60%;
+  left: 77%;
+  transform: translateY(-50%);
+}
+
+.reg_logo_block {
+  margin-top: 40px;
+  width: 1281px;
+}
+
+.reg_logo {
+  margin-left: 45%;
+}
+
+.reg_buttons {
+  width: 380px;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 700;
+  height: 60px;
+  /* Увеличил высоту для двух строк */
+  display: flex;
+  /* Добавил display: flex; */
+  flex-direction: column;
+  /* Установил направление колонкой */
+  justify-content: center;
+  /* Выравнил по центру по вертикали */
+  margin-top: 20px;
+}
+
+.reg_button,
+.back_button {
+  width: 280px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* Добавлено выравнивание по центру */
+  text-align: center;
+  margin: 5px auto;
+  text-transform: uppercase;
+  border-radius: 30px;
+  background-color: transparent;
+  color: #fff;
+  cursor: pointer;
+}
+
+.reg_button {
+  border: 1px #fff solid;
+}
+
+.reg_p {
+  margin-top: 15px;
+  font-size: 10px;
+  color: #fff;
+}
+
+.reg_span {
+  text-decoration: underline;
+  color: #fff;
+}
+
+.reg_a {
+  text-decoration: none;
+  color: #fff;
+}
+
+
+
+
+
+
+/* Уроки Lessons */
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  gap: 20px;
+  padding: 20px;
+}
+
+.sidebar {
+  display: flex;
+  flex-direction: column;
+}
+
+.ages,
+.categories {
+  margin-bottom: 20px;
+}
+
+.lessons-grid {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.lesson-block {
+  width: calc(33.333% - 20px);
+  border: 1px solid #ccc;
+  padding: 10px;
+}
+
+.lesson-block img {
+  width: 100%;
+  height: auto;
+}
+
+
+/* модальные окна */
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1050;
+}
+
+.modal-backdrop {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+  position: relative;
+  background: white;
+  border-radius: 5px;
+  padding: 20px;
+  max-width: 500px;
+  width: 100%;
+  z-index: 1;
+}
+
+.modal-header,
+.modal-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.modal-title {
+  margin: 0;
+}
+
+.modal-body {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+button {
+  cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1050;
+}
+
+.modal-backdrop {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+  background: white;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.dropdown .dropdown-menu {
+  display: none;
+  position: absolute;
+  background-color: white;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-menu {
+  display: block;
+}
