--- a/client/src/index.css
+++ b/client/src/index.css
@@ -940,3 +940,27 @@ button {
 .dropdown:hover .dropdown-menu {
   display: block;
 }
+
+
+
+
+
+
+
+/* спиннер */
+
+
+@keyframes spinner {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.spinner {
+  width: 50px;
+  height: 50px;
+  border: 5px solid rgba(150, 150, 150, 0.2);
+  border-top-color: #666;
+  border-radius: 50%;
+  animation: spinner 1s linear infinite;
+}
