--- a/client/src/index.css
+++ b/client/src/index.css
@@ -988,3 +988,28 @@ button {
   width:59px;
   border-radius: 50px;
 }
+
+
+
+/* Мероприятия */
+
+.events-container {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  gap: 20px;
+  margin: 20px;
+}
+
+.sidebar {
+  padding: 10px;
+}
+
+.main-content {
+  padding: 10px;
+}
+
+.event-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
