--- a/client/src/index.css
+++ b/client/src/index.css
@@ -559,63 +559,6 @@ a {
 
 /* Мероприятия */
 /* Events.css */
-.events-page {
-  display: flex;
-  flex-direction: row;
-  padding: 20px;
-}
-
-.event-category-bar {
-  flex-basis: 200px;
-  flex-shrink: 0;
-  margin-right: 20px;
-  display: flex;
-  flex-direction: column;
-}
-
-.event-category-bar button {
-  padding: 10px;
-  margin-bottom: 5px;
-  cursor: pointer;
-}
-
-.events-container {
-  display: flex;
-  flex-wrap: wrap;
-  flex-grow: 1;
-}
-
-.event-item {
-  width: 300px;
-  margin: 10px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-@media (max-width: 900px) {
-  .events-container {
-    justify-content: center;
-  }
-}
-
-@media (max-width: 600px) {
-  .events-page {
-    flex-direction: column;
-  }
-
-  .event-category-bar {
-    margin-right: 0;
-    margin-bottom: 20px;
-  }
-
-  .event-item {
-    width: 100%;
-  }
-}
-
 
 
 
@@ -691,7 +634,7 @@ a {
   z-index: -1;
 }
 
-.container {
+.auth-container {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -729,11 +672,6 @@ form {
   padding-top: 7px;
 }
 
-input,
-button {
-  margin: 10px;
-  padding: 5px;
-}
 
 .password-input {
   position: relative;
@@ -823,7 +761,7 @@ button {
 
 /* Уроки Lessons */
 
-.container {
+.lesson-container {
   display: grid;
   grid-template-columns: 1fr 3fr;
   gap: 20px;
@@ -1008,8 +946,372 @@ button {
   padding: 10px;
 }
 
-.event-list {
+
+
+
+
+
+
+.many-container {
+  display: flex;
+    justify-content: center;
+}
+
+.radius-container {
+  border-radius: 30px;
+  border: 1px #B6B6B6 solid;
+  max-width: 1138px;
+  margin: 0 auto;
+  transition: padding 0.3s;
+  margin: 0px 60px;
+  /* Плавное изменение padding */
+}
+
+.radius-container-content {
+  padding: 50px 80px;
+  transition: padding 0.3s;
+  /* Плавное изменение padding */
+}
+
+.page-title {
+  color: #22614C;
+  font-size: 34px;
+  font-weight: 600;
+  margin: 0px 0px 20px 0px;
+  transition: font-size 0.3s;
+  /* Плавное изменение размера шрифта */
+}
+
+.category {
   display: flex;
   flex-wrap: wrap;
+  gap: 15px;
+  margin-bottom: 15px;
+}
+
+.categoryButton {
+  background-color: #fff;
+  vertical-align: center;
+  align-items: center;
+  padding: 0 20px;
+  /* Упрощаем паддинги для кнопок */
+  font-size: 14px;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
+  /* Центрируем текст */
+  height: 44px;
+  border-radius: 20px;
+  border: none;
+  box-shadow: rgba(193, 193, 193, 0.4) 0px 5px 20px;
+  transition: transform 0.3s;
+}
+
+.categoryButton:hover {
+  background-color: #EDEDED;
+  box-shadow: rgba(193, 193, 193, 1.2) 0px 5px 20px;
+  transform: translateY(-10px);
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 18px;
+}
+
+
+.event-card {
+  cursor: pointer;
+  width: 310px;
+  margin-bottom: 35px;
+}
+
+.event-image {
+  width: 100%;
+  height: 170px;
+  border-radius: 20px;
+}
+
+.event-title {
+  font-size: 22px;
+  font-weight: 600;
+  line-height: 30px;
+  white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow-x: hidden;
+    margin: 11px 0px 7px 0px;
+}
+
+.marginNull {
+  margin: 0;
+}
+
+.dateLocation {
+  margin: 0;
+  display: flex;
+    align-items: center;
+    /* Центрирование элементов по вертикали */
+    gap: 12px;
+    /* Добавляем промежуток между элементами */
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.5);
+}
+
+.betweenDateLocation {
+  display: flex;
+  align-items: center;
+  width: 4px;
+  height: 4px;
+  background-color: rgba(0,0,0,0.5);
+  border-radius: 5px;
+
+  /* Центрирование точки по вертикали */
+}
+
+.underImg_event {
+  margin-left: 8px;
+}
+
+
+@media (max-width: 768px) {
+  .radius-container {
+    max-width: 738px;
+    padding: 0 10px;
+    /* Уменьшаем padding плавно */
+    margin: 0 15px;
+  }
+
+  .radius-container-content {
+    padding: 30px 20px;
+      transition: padding 0.3s;
+  }
+
+    .event-card {
+      margin-bottom: 25px;
+    }
+
+  .page-title {
+    font-size: 22px;
+    font-weight: 600;
+    margin: 0 0 10px 0;
+  }
+
+  .category {
+    gap: 10px;
+  }
+
+  .categoryButton {
+    padding: 0 16px;
+    /* Уменьшаем padding для кнопок */
+    font-size: 12px;
+    height: 34px;
+  }
+
+  .categoryButton:hover {
+    transform: translateY(-3px);
+  }
+
+    .cards {
+      gap: 18px;
+    }
+  
+  
+    .event-card {
+      width: 270px;
+      margin-bottom: 20px;
+    }
+  
+    .event-image {
+      height: 160px;
+    }
+  
+    .event-title {
+      font-size: 20px;
+      margin: 5px 0px 3px 0px;
+    }
+  
+    .marginNull {
+      margin: 0;
+    }
+  
+    .dateLocation {
+      gap: 10px;
+      font-size: 12px;
+    }
+  
+    .betweenDateLocation {
+      width: 3px;
+      height: 3px;
+    }
+}
+
+@media (max-width: 480px) {
+  .radius-container {
+    max-width: 90%;
+    padding: 10px 20px;
+    margin: 0 10px;
+  }
+
+  .radius-container-content {
+    padding-left: 20px;
+    padding-top: 20px;
+  }
+
+    .event-card {
+      margin-bottom: 5px;
+    }
+
+  .page-title {
+    font-size: 18px;
+  }
+
+  .category {
+    gap: 5px;
+    margin-top: 3px;
+    margin-bottom: 10px;
+  }
+
+  .categoryButton {
+    padding: 0px 12px;
+    font-size: 10px;
+    height: 30px;
+  }
+
+  
+  
+    .event-card {
+      width: 350px;
+      margin-bottom: 15px;
+    }
+  
+  
+    .event-title {
+      font-size: 18px;
+    }
+  
+}
+
+
+
+
+/* Страница мероприятия */
+.event-page-top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.backButton {
+  display: flex;
+  align-items: center;
+  background-color: #D78F80;
+  border: 1px solid #B6B6B6;
+  border-radius: 5px;
+  padding: 10px 25px;
+  font-weight: 600;
+  color: #fff;
+  cursor: pointer;
+  gap: 20px;
+  border-radius: 55px;
+}
+
+.event-page-title {
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+  flex: 1;
+}
+
+.event-page-image {
+  width: 100%;
+  max-height: 390px;
+  object-fit: cover;
+  margin-top: 20px;
+  border-radius: 20px;
+}
+
+.event-details {
+  display: flex;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.event-info {
+  flex: 1 1 20%;
+  display: flex;
+  flex-direction: column;
   gap: 10px;
+}
+
+.event-description {
+  flex: 1 1 90%;
+}
+
+.event-description-p {
+  margin-top: 0px;
+}
+
+.event-date,
+.event-location {
+  margin: 0;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.event-link-button {
+  display: inline-block;
+  padding: 10px 30px;
+  background-color: #327662;
+  color: white;
+  text-align: center;
+  border-radius: 5px;
+  text-decoration: none;
+  margin-top: 10px;
+  font-size: 12px;
+  border-radius: 55px;
+}
+
+@media (max-width: 768px) {
+  .event-details {
+    flex-direction: column;
+  }
+
+  .event-info,
+  .event-description {
+    flex: 1 1 100%;
+  }
+
+  .event-page-title {
+    text-align: center;
+  }
+  
+}
+
+@media (max-width: 480px) {
+  .radius-container {
+    padding: 10px;
+  }
+
+  .event-page-title {
+    font-size: 20px;
+  }
+
+  .event-page-image {
+    max-height: 250px;
+  }
+
+  .event-link-button {
+    padding: 8px 12px;
+    font-size: 14px;
+  }
+
+  .event-page-top {
+    display: block;
+    margin-bottom: 0;
+    align-items: center;
+  }
+
+    .event-image {
+      height: 180px;
+    }
 }
