--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,6 +21,46 @@ a {
   font-size: 0.8rem;
 }
 
+.system-modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.system-modal-content {
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  max-width: 500px;
+  width: 90%;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.system-modal-content h2 {
+  margin-top: 0;
+}
+
+.system-modal-content button {
+  display: block;
+  margin: 20px auto 0;
+  padding: 10px 20px;
+  background-color: #5b7572;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.system-modal-content button:hover {
+  background-color: #546D6A;
+}
 
 .header__logo,
 .header__search,
@@ -41,7 +81,8 @@ a {
   gap: 5px;
 }
 
-/* Медиа-запросы для разных размеров экрана */
+
+
 @media (max-width: 768px) {
   .header__search {
     display: none;
@@ -54,9 +95,6 @@ a {
   .header__socialNetwork {
     display: none;
   }
-
-
-
   .menu__item {
     margin: 10px 0;
   }
@@ -76,6 +114,7 @@ a {
   .header__help p {
     display: none;
   }
+
 }
 
 .system-header,
@@ -84,15 +123,47 @@ a {
   width: auto;
 }
 
-/* Флексбокс для выравнивания элементов */
+.photoInput {
+  background-color: #fff;
+  border-radius: 30px;
+    width: 200px;
+    height: 15px;
+    padding: 2px 22px;
+    border: none;
+    margin-bottom: 10px;
+    color: #7a7a7a;
+}
+
 .system-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
+.childInfo {
+  display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 30%;
+    text-align: center;
+    box-sizing: border-box;
+    margin-right: 15px;
+}
 
 
+
+.child_header_photo {
+  height: 600px;
+  width: 600px;
+  border-radius: 50%;
+}
+
+.statistics {
+  width: 70%;
+  padding-left: 20px;
+  box-sizing: border-box;
+}
 
 
 
@@ -102,7 +173,6 @@ a {
   display: flex;
   align-items: center;
   padding: 10px 60px;
-  /* Отступы синхронизированы с первым header */
   box-sizing: border-box;
   width: 100%;
 
@@ -115,9 +185,10 @@ a {
   width: 100%;
 }
 
+
+
 .child_header_left_container {
   flex-grow: 1;
-  /* Занимает все доступное пространство */
   display: flex;
   padding: 10px;
   border-radius: 55px;
@@ -125,8 +196,6 @@ a {
   background-color: #F7F8FD;
   align-items: center;
   margin-right: 20px;
-
-  /* Расстояние до правого блока */
 }
 
 .child_header_left {
@@ -140,13 +209,11 @@ a {
   margin: 0;
   padding: 0;
   justify-content: space-around;
-
 }
 
 .child_header_right_container {
   display: flex;
   width: 150px;
-  /* Фиксированная ширина */
   padding: 12px;
   border-radius: 55px;
   filter: drop-shadow(7px 7px 10px #A3A3A3);
@@ -158,13 +225,10 @@ a {
 .child_header_name {
   font-size: 14px;
   filter: none;
-  /* базовый размер шрифта */
 }
 
 .long_name {
   font-size: 12px;
-  
-  /* уменьшенный размер шрифта для длинных имен */
 }
 
 .child_header_right_long_container {
@@ -178,7 +242,6 @@ a {
   height: 47px;
   color: #000;
   width: 110px;
-  /* Фиксированная ширина */
   padding: 12px;
   border-radius: 55px;
   filter: drop-shadow(7px 7px 10px #A3A3A3);
@@ -222,11 +285,28 @@ a {
   }
   .child_header_right_container_auth {
     height: 27px;
-      /* Фиксированная ширина */
     padding: 4px;
   }
 }
 
+
+.adminNavBarButtons {
+  gap: 5px;
+  display: flex;
+}
+
+.butAdmin {
+  max-width: 120px;
+}
+
+.adminNavBar {
+  border: none;
+  background-color: transparent;
+}
+
+.logOutAdmin {
+  max-width: 80px;
+}
 
 
 
@@ -243,9 +323,7 @@ a {
   justify-content: space-between;
   align-items: center;
   padding: 10px 60px;
-  /* Отступы слева и справа для десктопной версии */
   box-sizing: border-box;
-  /* Включаем padding в общую ширину элемента */
   width: 100%;
   border-radius: 55px;
   filter: drop-shadow(7px 7px 10px #A3A3A3);
@@ -255,33 +333,26 @@ a {
 
 .logout-button {
   padding: 8px 16px;
-  /* Паддинги вокруг текста внутри кнопки */
   cursor: pointer;
   border-radius: 20px;
   height: 40px;
   width: 120px;
   border: none;
-
-  /* Курсор в виде руки при наведении */
 }
 
-/* Адаптивные медиа-запросы */
 @media (max-width: 768px) {
   .admin_header {
     padding: 10px 20px;
-    /* Уменьшаем padding для устройств с меньшим разрешением экрана */
   }
 
   .logout-button {
     padding: 6px 12px;
-    /* Уменьшаем padding в кнопке на мобильных устройствах */
   }
 }
 
 @media (max-width: 768px) {
   .admin_header {
     padding: 10px 20px;
-    /* Уменьшаем padding для устройств с меньшим разрешением экрана */
   }
 
   .admin_container {
@@ -291,47 +362,26 @@ a {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
 .container {
   display: flex;
-  /* Включаем flexbox */
   padding: 0 60px;
-  /* Отступы для десктопа */
   box-sizing: border-box;
-  /* Гарантируем, что padding включен в ширину */
   width: 100%;
-  /* Контейнер занимает всю ширину родителя */
 }
 
 .block1 {
   flex-grow: 1;
-  /* Блок растягивается, чтобы занять все доступное пространство */
   background-color: lightblue;
-  /* Для наглядности */
 }
 
 .block2 {
   width: 200px;
-  /* Фиксированная ширина */
   background-color: lightcoral;
-  /* Для наглядности */
 }
 
 @media (max-width: 768px) {
   .container {
     padding: 0 20px;
-    /* Меньшие отступы для мобильных устройств */
   }
 }
 
@@ -366,10 +416,8 @@ a {
 
 .mainView__img {
   max-width: 100%;
-  /* Обеспечивает адаптивность изображения */
   height: auto;
   object-fit: cover;
-  /* Поддерживает пропорции изображения */
 }
 
 @media (max-width: 868px) {
@@ -381,7 +429,6 @@ a {
 @media (max-width: 768px) {
   .mainView__block {
     padding: 0 20px;
-    /* Меньшие отступы для мобильных устройств */
   }
 }
 
@@ -394,14 +441,10 @@ a {
 .main_buttons {
   position: absolute;
     top: 32%;
-    /* Отступ сверху равен 32% от высоты блока */
     left: 9%;
-    /* Отступ слева равен 25% от ширины блока */
     display: flex;
     gap: 12px;
-    /* Расстояние между кнопками */
     flex-direction: row;
-    /* Расположение элементов в строку */
 }
 
 .mainView_button {
@@ -425,9 +468,7 @@ a {
   .mainView_button {
     width: 140px;
     height: 35px;
-    /* Уменьшаем ширину кнопок на меньших экранах */
     font-size: 14px;
-    /* Увеличиваем размер шрифта */
   }
 }
 
@@ -436,9 +477,7 @@ a {
 
     width: 110px;
     height: 25px;
-    /* Дальнейшее уменьшение ширины кнопок */
     font-size: 8px;
-    /* Ещё больше увеличиваем размер шрифта */
   }
 }
 
@@ -482,7 +521,6 @@ a {
 @media (max-width: 768px) {
   .mainView__blockw {
     padding: 0 20px;
-    /* Меньшие отступы для мобильных устройств */
   }
 }
 
@@ -522,9 +560,7 @@ a {
   .mainView_buttonw {
     width: 100px;
     height: 28px;
-    /* Уменьшаем ширину кнопок на меньших экранах */
     font-size: 14px;
-    /* Увеличиваем размер шрифта */
   }
     .main_buttonsw {
       left: 10%;
@@ -535,9 +571,7 @@ a {
   .mainView_buttonw {
     width: 80px;
     height: 20px;
-    /* Дальнейшее уменьшение ширины кнопок */
     font-size: 8px;
-    /* Ещё больше увеличиваем размер шрифта */
   }
 }
 
@@ -556,13 +590,8 @@ a {
 
 
 
-
 /* Мероприятия */
 /* Events.css */
-
-
-
-
 
 
 
@@ -590,9 +619,7 @@ a {
   transition: opacity 0.3s;
   opacity: 0;
   white-space: normal;
-  /* Указывает, что текст должен переноситься */
   overflow-wrap: break-word;
-  /* Гарантирует перенос слов по границам контейнера */
   text-align: center;
 }
 
@@ -631,8 +658,6 @@ a {
   left: 0;
   width: 100%;
   height: 100%;
-  /* background-image: url('../img/backReg.svg');
-  background-size: cover; */
   z-index: -1;
 }
 
@@ -725,7 +750,6 @@ form {
   display: flex;
   align-items: center;
   justify-content: center;
-  /* Добавлено выравнивание по центру */
   text-align: center;
   margin: 5px auto;
   text-transform: uppercase;
@@ -739,14 +763,10 @@ form {
   letter-spacing: 1px;
 }
 
-
-
 .reg_button {
   border: 1px #fff solid;
 }
 
-.back_button {
-}
 
 .regP {
   margin-top: 15px;
@@ -795,7 +815,6 @@ form {
   display: flex;
   flex-direction: column;
   margin-left: auto;
-  /* Pushes the sidebar to the right */
 }
 
 .ages,
@@ -866,22 +885,14 @@ form {
 }
 
 .modal-body {
-  margin-top: 20px;
+  margin-top: 10px;
   margin-bottom: 20px;
+  display: block;
 }
 
 button {
   cursor: pointer;
 }
-
-
-
-
-
-
-
-
-
 
 .modal {
   position: fixed;
@@ -922,15 +933,6 @@ button {
   display: block;
 }
 
-
-
-
-
-
-
-/* спиннер */
-
-
 @keyframes spinner {
   to {
     transform: rotate(360deg);
@@ -952,9 +954,22 @@ button {
   border-radius: 50px;
 }
 
+.child_profile_photo {
+  height: 160px;
+    width: 160px;
+    border-radius: 80px;
+}
 
+.childName {
+  margin-top: 20px;
+  margin-bottom: 0px;
+  font-size: 18px;
+}
 
-/* Мероприятия */
+.childAge {
+  margin-top: 6px;
+  font-size: 14px;
+}
 
 .events-container {
   display: grid;
@@ -963,20 +978,13 @@ button {
   margin: 20px;
 }
 
-
 .main-content {
   padding: 10px;
 }
 
-
-
-
-
-
-
 .many-container {
   display: flex;
-    justify-content: center;
+  justify-content: center;
 }
 
 .radius-container {
@@ -986,13 +994,11 @@ button {
   margin: 0 auto;
   transition: padding 0.3s;
   margin: 0px 60px;
-  /* Плавное изменение padding */
 }
 
 .radius-container-content {
   padding: 50px 80px;
   transition: padding 0.3s;
-  /* Плавное изменение padding */
 }
 
 .page-title {
@@ -1001,7 +1007,6 @@ button {
   font-weight: 600;
   margin: 0px 0px 20px 0px;
   transition: font-size 0.3s;
-  /* Плавное изменение размера шрифта */
 }
 
 .category {
@@ -1016,12 +1021,10 @@ button {
   vertical-align: center;
   align-items: center;
   padding: 0 20px;
-  /* Упрощаем паддинги для кнопок */
   font-size: 14px;
   font-weight: 600;
   display: flex;
   justify-content: center;
-  /* Центрируем текст */
   height: 44px;
   border-radius: 20px;
   border: none;
@@ -1072,9 +1075,7 @@ button {
   margin: 0;
   display: flex;
     align-items: center;
-    /* Центрирование элементов по вертикали */
     gap: 12px;
-    /* Добавляем промежуток между элементами */
     font-size: 14px;
     color: rgba(0, 0, 0, 0.5);
 }
@@ -1086,8 +1087,6 @@ button {
   height: 4px;
   background-color: rgba(0,0,0,0.5);
   border-radius: 5px;
-
-  /* Центрирование точки по вертикали */
 }
 
 .underImg_event {
@@ -1099,7 +1098,6 @@ button {
   .radius-container {
     max-width: 738px;
     padding: 0 10px;
-    /* Уменьшаем padding плавно */
     margin: 0 15px;
   }
 
@@ -1124,7 +1122,6 @@ button {
 
   .categoryButton {
     padding: 0 16px;
-    /* Уменьшаем padding для кнопок */
     font-size: 12px;
     height: 34px;
   }
@@ -1134,7 +1131,6 @@ button {
   }
     .adminButton {
       padding: 0 16px;
-      /* Уменьшаем padding для кнопок */
       font-size: 12px;
       height: 34px;
     }
@@ -1213,14 +1209,11 @@ button {
       font-size: 10px;
       height: 30px;
     }
-
-  
   
     .event-card {
       width: 350px;
       margin-bottom: 15px;
     }
-  
   
     .event-title {
       font-size: 18px;
@@ -1228,10 +1221,6 @@ button {
   
 }
 
-
-
-
-/* Страница мероприятия */
 .event-page-top {
   display: flex;
   align-items: center;
@@ -1245,6 +1234,7 @@ button {
   border: 1px solid #B6B6B6;
   border-radius: 5px;
   padding: 10px 25px;
+  margin-bottom: 20px;
   font-weight: 600;
   color: #fff;
   cursor: pointer;
@@ -1351,6 +1341,10 @@ button {
     .event-image {
       height: 180px;
     }
+
+    .footer_three {
+      display: block;
+    }
 }
 
 
@@ -1365,9 +1359,7 @@ button {
   margin-bottom: 10px;
   display: flex;
   justify-content: center;
-  /* Центрирование по горизонтали */
   align-items: center;
-  /* Центрирование по вертикали */
 }
 
 .material-image {
@@ -1386,14 +1378,9 @@ button {
   display: block;
 }
 
-
-
-
-
-
 .profileContent {
   display: flex;
-  width: 1000px;
+  max-width: 1000px;
 }
 
 
@@ -1406,12 +1393,10 @@ button {
   vertical-align: center;
   align-items: center;
   padding: 0 20px;
-  /* Упрощаем паддинги для кнопок */
   font-size: 14px;
-  font-weight: 600;
+  font-weight: 500;
   display: flex;
   justify-content: center;
-  /* Центрируем текст */
   height: 44px;
   border-radius: 20px;
   border: none;
@@ -1427,8 +1412,7 @@ button {
 }
 
 .categories .selected {
-  color: red;
-  /* Дополнительные стили для выделения */
+  color: #D77561;
 }
 
 h1 {
@@ -1490,23 +1474,16 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* Центрируем по вертикали */
   justify-content: center;
-  /* Центрируем по горизонтали */
 }
 
 .backLesson {
   position: absolute;
-  /* Устанавливаем абсолютное позиционирование */
   top: 24px;
-  /* Задаем расстояние от верхней части контейнера */
   left: 30px;
   cursor: pointer;
-  /* Меняем курсор при наведении */
   display: flex;
-  /* Используем flex для выравнивания содержимого */
   align-items: center;
-  /* Выравниваем элементы по вертикали */
 }
 
 .lessonImages {
@@ -1542,16 +1519,11 @@ h1 {
 .lessonButtons {
   display: flex;
   justify-content: center;
-  /* Центрируем кнопки */
   gap: 20px;
   position: absolute;
-  /* Абсолютное позиционирование контейнера */
   bottom: 20px;
-  /* Отступ от нижнего края */
   left: 50%;
-  /* Центрируем контейнер горизонтально */
   transform: translateX(-50%);
-  /* Смещаем контейнер на половину его ширины влево */
 }
 
 .lessonButton {
@@ -1573,13 +1545,9 @@ h1 {
 
 .lessonBut {
   position: absolute;
-    /* Устанавливаем абсолютное позиционирование */
     bottom: 30px;
-    /* Отступ от нижнего края */
     left: 50%;
-    /* Располагаем кнопку по центру горизонтально */
     transform: translateX(-50%);
-    /* Смещаем кнопку на половину своей ширины влево */
     width: 220px;
     height: 55px;
     border-radius: 30px;
@@ -1595,30 +1563,6 @@ h1 {
   background-color: #4AA91F;
 }
 
-.modal {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  right: auto;
-  bottom: auto;
-  margin-right: -50%;
-  transform: translate(-50%, -50%);
-  background: white;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.75);
-  z-index: 1000;
-}
-
 
 .mainPic {
   max-width: 1142px;
@@ -1627,20 +1571,23 @@ h1 {
   display: block;
   margin: 0 auto;
   padding: 0 25px;
-  /* Добавляем отступы по бокам */
+  margin-bottom: 8px;
 }
 
 @media screen and (max-width: 1142px) {
   .mainPic {
     max-width: calc(100% - 60px);
-    /* Уменьшаем ширину изображения на сумму отступов */
   }
+    .footer {
+      gap: 40px;
+      padding: 25px 20px 20px 20px;
+      margin: 20px;
+    }
 }
 
 @media screen and (max-width: 768px) {
   .mainPic {
     max-width: calc(100% - 30px);
-    /* Уменьшаем ширину изображения на сумму отступов */
   }
 }
 
@@ -1648,11 +1595,11 @@ h1 {
 .ages {
   position: relative;
   width: 200px;
-  /* Настройте ширину по необходимости */
 }
 
 .dropdown {
   position: relative;
+  margin-bottom: 5px;
 }
 
 .dropdown-button {
@@ -1693,21 +1640,297 @@ h1 {
 
 .lessonAgeLi {
   list-style-type: none;
-  /* Убирает маркеры списка */
   cursor: pointer;
-  /* Делает элементы кликабельными */
   padding: 4px 0;
-
-  /* Добавляет отступы для лучшего внешнего вида */
 }
 
 .lessonAgeLi:hover {
   border-radius: 10px;
   border: 1px solid #cacaca;
   padding: 4px 8px;
-  /* Добавляет эффект при наведении */
 }
 
 .lessonCategoryH3 {
   margin-bottom: 0px;
+}
+
+
+.lessonTitle {
+  margin-left: 4px;
+  margin-top: 8px;
+
+}
+
+.lessonTitleDiv {
+  max-width: 145px;
+}
+
+.modalClose {
+  background-color: #d6d6d6;
+  border: 1px solid #d6d6d6;
+  padding: 5px 10px;
+}
+
+.modalClick {
+  background-color: #327662;
+  color: #fff;
+  border: 1px solid #327662;
+  padding: 5px 10px;
+}
+
+.modalForm {
+  display: block;
+  margin-bottom: 5px;
+  width: 480px;
+}
+
+.lessonReturnToTask {
+  font-size: 16px;
+  background-color: #7dc956;
+}
+
+
+.lessonEnd {
+  align-items: center;
+  background-color: #fff;
+  padding: 20px 20px 60px 20px;
+  border-radius: 30px;
+  border: 1px solid #609881;
+  padding: 16px 37px;
+}
+
+.lessonEndButton {
+  width: 180px;
+  height: 42px;
+  border-radius: 30px;
+  border: none;
+  color: #fff;
+}
+
+.lessonEndButtons {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 40px;
+  left: 35%;
+}
+
+.eyeIcon {
+  position: absolute;
+  margin-top: 15px;
+  margin-left: -35px;
+}
+
+.getAward {
+  background-color: #7dc956;
+}
+
+.newLesson {
+  background-color: #7dc956;
+}
+
+
+.cards.main-content {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+}
+
+button {
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.imgGame {
+    width: 100px;
+    height: 100px;
+    cursor: pointer;
+    border: 1px solid #b0b0b0;
+    padding: 20px;
+}
+
+img.matched {
+    border: 2px solid green;
+}
+
+.matching-game {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.words, .images {
+    display: flex;
+    gap: 10px;
+    margin: 10px 0;
+}
+
+.connections {
+    position: absolute;
+    pointer-events: none;
+}
+
+.controls {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.centered-message {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -30%);
+  text-align: center;
+  font-size: 1.2em;
+  background-color: #fff;
+  border-radius: 30px;
+  border: 1px solid #609881;
+  padding: 40px;
+  color: #22614C;
+}
+
+.game-modal, .result-modal {
+    position: relative;
+    width: 80%;
+    margin: 0 auto;
+    padding: 20px;
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.tat-centered-message {
+  color: #D78F80;
+  margin-top: 15px;
+}
+
+.updateProfileButton:hover {
+  background-color: #b96b5c;
+}
+
+.game-modal-overlay, .result-modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.wordGame {
+  padding: 10px 25px;
+  border: none;
+  color: #000;
+  border-radius: 30px;
+}
+
+.gameButton {
+  border-radius: 20px;
+  border: none;
+  background: #69c23f;
+  color: #fff;
+  padding: 10px 25px;
+}
+
+.gameCheckButton {
+  background: #ca7d6d;
+  font-size: 18px;
+  padding: 10px 25px;
+}
+
+.reg_button:hover {
+  background-color: #d78675;
+}
+
+.updateProfileButton {
+  font-size: 12px;
+  padding: 10px 25px;
+  margin-bottom: 10px;
+  letter-spacing: 1px;
+}
+
+.footer {
+  display: flex;
+  background-color: #4b4b4b;
+  color: #ffffff;
+  font-size: 14px;
+  gap: 100px;
+  padding: 35px 40px 35px 40px;
+  flex-wrap: wrap;
+  margin: 40px;
+  margin: 0 auto;
+  max-width: 1065px;
+  border-radius: 30px;
+}
+
+.footer_block {
+  display: flex;
+}
+
+.footer_img {
+  max-height: 20px;
+  margin-right: 10px;
+}
+
+.footer_title {
+  font-size: 20px;
+  font-weight: 500;
+  margin-bottom: 10px;
+  margin-top: 0;
+}
+
+.footer_title_main {
+  font-weight: 700;
+}
+
+.footer_text {
+  cursor: pointer;
+}
+
+.footer_list {
+  margin-bottom: 7px;
+}
+
+.footer_a {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.footer_mail-phone {
+  display: flex;
+}
+
+.footer_third {
+  margin-left: auto;
+  display: block;
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+    padding: 20px;
+  }
+    .footer {
+      font-size: 14px;
+      gap: 20px;
+      margin: 20px;
+    }
+
+        .footer_title {
+          font-size: 16px;
+          font-weight: 500;
+          margin-bottom: 8px;
+          margin-top: 0;
+        }
+}
+
+.backProfileButton {
+  background-color: #fab6a8;
+  font-size: 10px;
 }
